Adiciona configurações de banco de dados